--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,23 +1,22 @@
 Package: aprof
 Type: Package
 Title: Amdahl's profiler, directed optimization made easy.
-Version: 0.1
-Date: 2013-06-25
+Version: 0.2
+Date: 2014-05-13
 Author: Marco D. Visser
 Maintainer: Marco D. Visser <marco.d.visser@gmail.com>
-Description: An R package to assist the evaluation of whether and
-    where to focus code optimization, using Amdahl's
-    law and visual aids based on line profiling. 
-    It is meant to help to balance development vs. execution time.
-    The package aprof is an addition to R's standard profiling tools 
-    and is not a wrapper for them. Amdahl's profiler organises profiling output
-    files in a visually appealing  way and helps to identify the most 
-    promising sections of code to optimize. 
+Description: Assists the evaluation of whether and
+    where to focus code optimization, using Amdahl's law and visual aids
+    based on line profiling. Amdahl's profiler organises profiling output
+    files (will soon include memory profiling) in a visually appealing
+    way. It is meant to help to balance development vs. execution time
+    by helping to identify the most promising sections of code to
+    optimize and projecting potential gains. The package is an addition
+    to R's standard profiling tools and is not a wrapper for them.
 License: GPL-2
 URL: http://github.com/MarcoDVisser/aprof
 BugReports: http://github.com/MarcoDVisser/aprof/issues
-Collate: 'aprof.R'
-Packaged: 2013-10-31 15:59:29 UTC; marco
+Packaged: 2014-05-14 15:33:53 UTC; marcov
 NeedsCompilation: no
 Repository: CRAN
-Date/Publication: 2013-10-31 18:41:41
+Date/Publication: 2014-05-14 18:11:22
