--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,22 +1,23 @@
 Package: aprof
 Type: Package
-Title: Amdahl's profiler, directed optimization made easy.
-Version: 0.2.4
-Date: 2014-08-20
+Title: Amdahl's Profiler, Directed Optimization Made Easy
+Version: 0.2.5
+Date: 2015-07-17
 Author: Marco D. Visser
 Maintainer: Marco D. Visser <marco.d.visser@gmail.com>
 Description: Assists the evaluation of whether and
     where to focus code optimization, using Amdahl's law and visual aids
     based on line profiling. Amdahl's profiler organises profiling output
-    files (will soon include memory profiling) in a visually appealing
-    way. It is meant to help to balance development vs. execution time
-    by helping to identify the most promising sections of code to
-    optimize and projecting potential gains. The package is an addition
-    to R's standard profiling tools and is not a wrapper for them.
-License: GPL-2
+    files (planned inclusion of memory profiling in the next major release)
+    in a visually appealing way. It is meant to help to balance development
+    vs. execution time by helping to identify the most promising sections
+    of code to optimize and projecting potential gains. The package is
+    an addition to R's standard profiling tools and is not a wrapper for them.
+License: GPL (>= 2)
 URL: http://github.com/MarcoDVisser/aprof
 BugReports: http://github.com/MarcoDVisser/aprof/issues
-Packaged: 2014-11-20 23:14:09 UTC; marcov
-NeedsCompilation: no
+Imports: graphics, grDevices, stats
 Repository: CRAN
-Date/Publication: 2014-11-21 00:58:17
+NeedsCompilation: no
+Packaged: 2015-07-20 11:20:16 UTC; marcov
+Date/Publication: 2015-07-20 18:08:57
